# nxas

./: .clang-format  CMakeLists.txt  README.md  context.h  dksh.cpp  error.c  error.cpp  error.h  helper.c  helper.cpp  helper.h  instruction.h  meson.build  nxas.c  nxas.cpp  opcode.h  operand.cpp  operand.h  parse.c  parse.cpp  parse.h  parse_predicate.c  source.c  source.h  span.h  table.h  token.c  token.cpp  token.h  write.cpp
include/: nxas.h
instructions/: exit.c  helper.c  helper.h  list.inc  mov.c  mov32i.c  nop.c  shr.c  stg.c
src/: command_line.cpp  context.cpp  context.h  dksh.cpp  error.h  fp16.h  helper.cpp  helper.h  meson.build  nxas.cpp  nxas.h  opcode.h  operand.h  options.cpp  parse.cpp  parse.h  table.h  token.cpp  token.h  write.cpp
tests/: CMakeLists.txt  meson.build  tester.cpp
