tester = executable('tester', 'tester.cpp', dependencies : [nxas_dep])

tests_expressions = [
	['NOP', '0x50b0000000070f00'],
	['NOP.TRIG', '0x50b0000000072f00'],
	['NOP CC.F', '0x50b0000000070000'],
	['NOP CC.LT', '0x50b0000000070100'],
	['NOP CC.EQ', '0x50b0000000070200'],
	['NOP CC.LE', '0x50b0000000070300'],
	['NOP CC.GT', '0x50b0000000070400'],
	['NOP CC.NE', '0x50b0000000070500'],
	['NOP CC.GE', '0x50b0000000070600'],
	['NOP CC.NUM', '0x50b0000000070700'],
	['NOP CC.NAN', '0x50b0000000070800'],
	['NOP CC.LTU', '0x50b0000000070900'],
	['NOP CC.EQU', '0x50b0000000070a00'],
	['NOP CC.LEU', '0x50b0000000070b00'],
	['NOP CC.GTU', '0x50b0000000070c00'],
	['NOP CC.NEU', '0x50b0000000070d00'],
	['NOP CC.GEU', '0x50b0000000070e00'],
	['NOP CC.T', '0x50b0000000070f00'],
	['NOP CC.OFF', '0x50b0000000071000'],
	['NOP CC.LO', '0x50b0000000071100'],
	['NOP CC.SFF', '0x50b0000000071200'],
	['NOP CC.LS', '0x50b0000000071300'],
	['NOP CC.HI', '0x50b0000000071400'],
	['NOP CC.SFT', '0x50b0000000071500'],
	['NOP CC.HS', '0x50b0000000071600'],
	['NOP CC.OFT', '0x50b0000000071700'],
	['NOP CC.CSM_TA', '0x50b0000000071800'],
	['NOP CC.CSM_TR', '0x50b0000000071900'],
	['NOP CC.CSM_MX', '0x50b0000000071a00'],
	['NOP CC.FCSM_TA', '0x50b0000000071b00'],
	['NOP CC.FCSM_TR', '0x50b0000000071c00'],
	['NOP CC.FCSM_MX', '0x50b0000000071d00'],
	['NOP CC.RLE', '0x50b0000000071e00'],
	['NOP CC.RGT', '0x50b0000000071f00'],
	['NOP 0x3', '0x50b0000000370000'],
	['NOP CC.OFF, 0x80', '0x50b0000008071000'],
]

foreach e : tests_expressions
	test(e[0], tester, args : [e[0], e[1]])
endforeach
